add pipeline event handle

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,15 +1,16 @@
+server:
+  port: 8088
+
 spring:
   application:
     name: gitty
   webflux:
     base-path: /gitty
   data.mongodb.uri: mongodb://localhost:27017/gitty
-server:
-  port: 8088
-
 
 gitlab:
   baseUrl: *
+  token: *
 
 telegram:
   bot.name: tg_gitty_bot
