--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 GITLAB_BASE_URL=http://cm-dev.fisgroup.ru:8888/
-GITLAB_TOKEN=WvKdSo6epDgvgqH8MiYB
+GITLAB_TOKEN=*
 BOT_NAME=tg_gitty_bot
-BOT_TOKEN=5137315675:AAH3snrqARapnuPcgd22r20E1abT-GaEDXo
+BOT_TOKEN=*
