--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,19 @@ services:
     restart: always
     ports:
       - "27017:27017"
+    volumes:
+      - /data/db:/data/db
+  nginx:
+    container_name: my-nginx
+    image: nginx
+    ports:
+      - "81:81"
+      - "443:443"
+    depends_on:
+      - "api_service"
+    volumes:
+      - /etc/letsencrypt/live/gitty.shop/fullchain.pem:/etc/letsencrypt/live/gitty.shop/fullchain.pem
+      - /etc/letsencrypt/live/gitty.shop/privkey.pem:/etc/letsencrypt/live/gitty.shop/privkey.pem
+      - /etc/letsencrypt/options-ssl-nginx.conf:/etc/letsencrypt/options-ssl-nginx.conf
+      - /etc/letsencrypt/ssl-dhparams.pem:/etc/letsencrypt/ssl-dhparams.pem
+      - /etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
